# mch-anemoi-plugins

./: .gitignore  .pre-commit-config.yaml  README.md  README.rst  pyproject.toml
.github/workflows/: ci.yaml
example_anemoi_dataset_configs/: val_set_nowcasting.yaml
src/mch_anemoi_plugins/: helpers.py  xarray_extensions.py
src/mch_anemoi_plugins/transform/: __init__.py  _filters.py  filter.py  filters.py  sources.py
src/mch_anemoi_plugins/transform/filters/: __init__.py  clipping.py  destaggering.py  geopotential_from_height.py  grid.py  horizontal_interpolation.py  omega_from_w.py  vertical_interpolation.py
src/mch_anemoi_plugins/transform/filters/_vendor/: interp2grid.py
src/mch_anemoi_plugins/transform/sources/: __init__.py  data_provider_sources.py  realch1.py  realch1_precip.py  weathermart.py  weathermart_sources.py  xarray_extensions.py
src/mch_anemoi_plugins/utils/: grib.py
tests/: conftest.py  test_helpers.py
tests/test_transform/: test_filters.py  test_sources.py
tools/: setup_env.sh
