[project]
name = "mch-anemoi-plugins"
version = "0.1.0"
description = "Add your description here"
readme = "README.rst"
authors = [{ name = "MeteoSwiss" }]
requires-python = ">=3.12"
dependencies = [
    "anemoi-datasets",
    "anemoi-plugins",
    "anemoi-transform",
]


[project.optional-dependencies]
grib = [
    "eccodes>=2.40.0",
    "meteodatalab",
    "pyproj",
    "pandas",
    "xarray",
    "gridefix-read",
    "zarr",
    "geopandas",
    "dask",
    "rioxarray",
    "gridefix-process",
    "pyyaml",
    #"data-provider",
    "omegaconf>=2.3.0,<3",
    "cf-units>=3.2.0,<4",
    "earthkit>=0.10.0",
]

[project.scripts]
mch-anemoi-plugins = "mch_anemoi_plugins:main"

[project.entry-points."anemoi.datasets.sources"]
cosmo1e = "mch_anemoi_plugins.transform.sources:cosmo"
inca = "mch_anemoi_plugins.transform.sources:inca"
iconCH1 = "mch_anemoi_plugins.transform.sources:icon"
kendaCH1 = "mch_anemoi_plugins.transform.sources:kenda"
radar = "mch_anemoi_plugins.transform.sources:radar"
station = "mch_anemoi_plugins.transform.sources:station"
satellite = "mch_anemoi_plugins.transform.sources:satellite"
dem = "mch_anemoi_plugins.transform.sources:dem"
opera = "mch_anemoi_plugins.transform.sources:opera"
eumetsat = "mch_anemoi_plugins.transform.sources:eumetsat"

[project.entry-points."anemoi.datasets.filters"]
project = "mch_anemoi_plugins.transform.filters:project"
interp2res = "mch_anemoi_plugins.transform.filters:interp2res"
interp2grid = "mch_anemoi_plugins.transform.filters:interp2grid"
uv2dirspeed = "mch_anemoi_plugins.transform.filters:uv2dirspeed"
dirspeed2uv = "mch_anemoi_plugins.transform.filters:dirspeed2uv"
q2dewpoint = "mch_anemoi_plugins.transform.filters:q2dewpoint"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.dependency-groups.dev]
dependencies = [
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "mypy>=1.6.1,<2",
    "pydata-sphinx-theme>=0.14.1,<0.15",
    "pylint>=3.0.2,<4",
    "pytest-cov>=4.1.0,<5",
    "sphinx>=7.2.6,<8",
    "sphinx-autoapi>=3.0.0,<4",
    "yapf>=0.40.2,<0.41",
]

[tool.uv.sources]
anemoi-plugins = { git = "https://github.com/ecmwf/anemoi-plugins" }
anemoi-datasets = { git = "https://github.com/ecmwf/anemoi-datasets" }
anemoi-transform = { git = "https://github.com/ecmwf/anemoi-transform" }
meteodatalab = { git = "https://github.com/MeteoSwiss/meteodata-lab", branch = "updated-dependencies"}

[dependency-groups]
dev = [
    "ipdb",
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
]

[project.entry-points."anemoi.transform.filters"]
example = "mch_anemoi_plugins.transform.filter:ExamplePlugin"
destagger = "mch_anemoi_plugins.transform.filter:HorizontalDestagger"
