[project]
name = "mch-anemoi-plugins"
version = "0.1.0"
description = "Add your description here"
readme = "README.rst"
authors = [{ name = "MeteoSwiss" }]
requires-python = ">=3.12"
dependencies = [
    "anemoi-datasets>=0.5.22",
    "anemoi-transform>=0.1.9",
    "earthkit-data>=0.13.8",
    "eccodes==2.38.3",
]

[project.optional-dependencies]
gridefix = [
    "gridefix-read",
    "gridefix-process",
]
grib = [
    "meteodata-lab>=0.3.0",
]
# observations = ["data-provider"]


[project.entry-points."anemoi.transform.sources"]
inca = "mch_anemoi_plugins.transform.sources:inca"
radar = "mch_anemoi_plugins.transform.sources:radar"
station = "mch_anemoi_plugins.transform.sources:station"
satellite = "mch_anemoi_plugins.transform.sources:satellite"
dem = "mch_anemoi_plugins.transform.sources:dem"
opera = "mch_anemoi_plugins.transform.sources:opera"
eumetsat = "mch_anemoi_plugins.transform.sources:eumetsat"

[project.entry-points."anemoi.transform.filters"]
project = "mch_anemoi_plugins.transform.filters:Project"
interp2res = "mch_anemoi_plugins.transform.filters:Interp2Res"
interp2grid = "mch_anemoi_plugins.transform.filters:Interp2Grid"
uv2dirspeed = "mch_anemoi_plugins.transform.filters:UV2Dirspeed"
dirspeed2uv = "mch_anemoi_plugins.transform.filters:Dirspeed2UV"
q2dewpoint = "mch_anemoi_plugins.transform.filters:Q2Dewpoint"
destagger = "mch_anemoi_plugins.transform.filters:HorizontalDestagger"
clip-lateral-boundaries = "mch_anemoi_plugins.transform.filters:ClipLateralBoundaries"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipdb>=0.13.13",
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
]

[[tool.uv.index]]
name = "pypi-mch"
url = "https://service.meteoswiss.ch/nexus/repository/python-all/simple"
explicit = true


[tool.uv.sources]
anemoi-plugins = { git = "https://github.com/ecmwf/anemoi-plugins" }
anemoi-datasets = { git = "https://github.com/ecmwf/anemoi-datasets" }
anemoi-transform = { git = "https://github.com/ecmwf/anemoi-transform" }
meteodata-lab = { git = "https://github.com/MeteoSwiss/meteodata-lab", branch="main"}
# data-provider = {git = "https://service.meteoswiss.ch/git/nowcasting/pronos/data-provider.git"}
gridefix-read = { index = "pypi-mch"}
gridefix-process = { index = "pypi-mch"}


[tool.ruff]
lint.select = ["I"]
